Import glibc-mainline for 2006-08-29

--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,21 @@
+2006-08-28  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf/dl-load.c (_dl_init_paths): Expand DSTs.
+
+	* elf/dl-open.c (dl_open_worker): Allow $LIB and $PLATFORM in
+	dlopen parameters.
+
+2006-08-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* inet/getnameinfo.c (getnameinfo): For AF_INET, check errno
+	only if herrno is NETDB_INTERNAL.  Handle errors other than
+	ERANGE outside of the loops, handle TRY_AGAIN.
+
+	* locale/programs/ld-ctype.c (translit_flatten): Issue error
+	if other's ctype category was missing.
+	* locale/programs/ld-collate.c (collate_read): Return if
+	copy_locale's collate category is missing.
+
 2006-08-27  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #2684]
