--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,4 +1,21 @@
+2006-09-09  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #2821]
+	* time/mktime.c (guess_time_tm): Fix overflow detection.
+	* time/Makefile (tests): Add bug-mktime1.
+	* time/bug-mktime1.c: New file.
+
+	[BZ #3189, #3188]
+	* misc/sys/mman.h (remap_file_pages): Make available for _GNU_SOURCE.
+	(mremap): Likewise.
+
 2006-09-07  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #1006]
+	* sysdeps/sparc/sparc64/dl-machine.h (elf_machine_rela):
+	Ensure relocation doesn't clobber any bits outside of the
+	immediate field for R_SPARC_TLS_LE_HIX22, R_SPARC_WDISP30,
+	R_SPARC_HI22 and R_SPARC_H44.
 
 	[BZ #2775]
 	* malloc/malloc.c (sYSMALLOc): Only call grow_heap if
