--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,6 +1,33 @@
+2006-09-17  Mike Frysinger  <vapier@gentoo.org>
+
+	* sysdeps/unix/sysv/linux/sys/ptrace.h [PTRACE_SETOPTIONS,
+	PTRACE_GETEVENTMSG, PTRACE_GETSIGINFO, PTRACE_SETSIGINFO]: Define.
+	* sysdeps/unix/sysv/linux/ptrace.c [PTRACE_SETOPTIONS,
+	PTRACE_GETEVENTMSG, PTRACE_GETSIGINFO, PTRACE_SETSIGINFO]: Check.
+
+2006-09-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/powerpc/powerpc32/register-dump.h (register_dump): Don't
+	write '\0' to the fd.
+	* sysdeps/mach/hurd/powerpc/register-dump.h (register_dump): Likewise.
+	* sysdeps/powerpc/powerpc64/register-dump.h (register_dump): Likewise.
+	Change regs to unsigned long pointer from unsigned int, fix fscr
+	offset.
+
+2006-09-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* io/Makefile (CFLAGS-fstatat.c): Set.
+	(CFLAGS-fstatat64.c): Likewise.
+	(CFLAGS-mknodat.c): Likewise.
+
+	* sysdeps/ieee754/ldbl-128ibm/s_llrintl.c: Comment fixes.
+	* sysdeps/ieee754/ldbl-128ibm/s_llroundl.c: Likewise.
+	* sysdeps/ieee754/ldbl-128ibm/s_lrintl.c: Rewritten.
+	* sysdeps/ieee754/ldbl-128ibm/s_lroundl.c: Rewritten.
+
 2006-09-14  Jakub Jelinek  <jakub@redhat.com>
 	    Steven Munroe  <sjmunroe@us.ibm.com>
-	    
+
 	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_cap_flags): Add 4 new cap
 	names to the beginning.  Rename "cell" to "cellbe".
 	(_dl_powerpc_platforms): New.
