Import glibc-linuxthreads-mainline for 2006-09-22

--- a/fsf/trunk/linuxthreads/linuxthreads/ChangeLog
+++ b/fsf/trunk/linuxthreads/linuxthreads/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-21  Richard Sandiford  <richard@codesourcery.com>
+
+	* linuxthreads.texi (pthread_mutex_lock): Fix double close bracket.
+	Fix markup.
+
 2006-07-24  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* pthread.c: Check PTHREAD_SIGBASE before #error.
