--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,9 +1,22 @@
+2006-10-13  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #3313]
+	* malloc/malloc.c (malloc_consolidate): Don't use get_fast_max to
+	determine highest fast bin to consolidate, always look into all of
+	them.
+	(do_check_malloc_state): Only require for empty bins for large
+	sizes in main arena.
+
+	* libio/stdio.h: Add more __wur attributes.
+
+	* elf/dl-minimal.c (realloc): Optimize last patch.
+
 2006-10-12  Richard Sandiford  <richard@codesourcery.com>
 
 	[BZ #3352]
 	* elf/dl-minimal.c (realloc): Let malloc() return a new pointer,
 	and use memcpy() if it does.
-		
+
 2006-11-12  Andreas Jaeger  <aj@suse.de>
 
 	[BZ #2510]
