--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,95 @@
+2006-11-10  Ulrich Drepper  <drepper@redhat.com>
+
+	* timezone/africa: Update from tzdata2006o.
+	* timezone/antarctica: Likewise.
+	* timezone/asia: Likewise.
+	* timezone/australasia: Likewise.
+	* timezone/backward: Likewise.
+	* timezone/europe: Likewise.
+	* timezone/iso3166.tab: Likewise.
+	* timezone/northamerica: Likewise.
+	* timezone/southamerica: Likewise.
+	* timezone/zone.tab: Likewise.
+
+	* time/tzfile.c (__tzfile_read): Extend to handle new file format
+	on machines with 64-bit time_t.
+
+	* timezone/checktab.awk: Update from tzcode2006o.
+	* timezone/ialloc.c: Likewise.
+	* timezone/private.h: Likewise.
+	* timezone/scheck.: Likewise.
+	* timezone/tzfile.h: Likewise.
+	* timezone/tzselect.ksh: Likewise.
+	* timezone/zdump.c: Likewise.
+	* timezone/zic.c: Likewise.
+
+	[BZ #3483]
+	* elf/ldconfig.c (main): Call setlocale and textdomain.
+	Patch mostly by Benno Schulenberg <bensberg@justemail.net>.
+
+	[BZ #3480]
+	* manual/argp.texi: Fix typos.
+	* manual/charset.texi: Likewise.
+	* manual/errno.texi: Likewise.
+	* manual/filesys.texi: Likewise.
+	* manual/lang.texi: Likewise.
+	* manual/maint.texi: Likewise.
+	* manual/memory.texi: Likewise.
+	* manual/message.texi: Likewise.
+	* manual/resource.texi: Likewise.
+	* manual/search.texi: Likewise.
+	* manual/signal.texi: Likewise.
+	* manual/startup.texi: Likewise.
+	* manual/stdio.texi: Likewise.
+	* manual/sysinfo.texi: Likewise.
+	* manual/syslog.texi: Likewise.
+	* manual/time.texi: Likewise.
+	Patch by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.
+
+	[BZ #3465]
+	* sunrpc/clnt_raw.c: Minimal message improvements.
+	* sunrpc/pm_getmaps.c: Likewise.
+	* nis/nss_nisplus/nisplus-publickey.c: Likewise.
+	* nis/nis_print_group_entry.c: Likewise.
+	* locale/programs/repertoire.c: Likewise.
+	* locale/programs/charmap.c: Likewise.
+	* malloc/memusage.sh: Likewise.
+	* elf/dl-deps.c: Likewise.
+	* locale/programs/ld-collate.c: Likewise.
+	* libio/vswprintf.c: Likewise.
+	* malloc/memusagestat.c: Likewise.
+	* sunrpc/auth_unix.c: Likewise.
+	* sunrpc/rpc_main.c: Likewise.
+	* nscd/cache.c: Likewise.
+	* locale/programs/repertoire.c: Unify output messages.
+	* locale/programs/charmap.c: Likewise.
+	* locale/programs/ld-ctype.c: Likewise.
+	* locale/programs/ld-monetary.c: Likewise.
+	* locale/programs/ld-numeric.c: Likewise.
+	* locale/programs/ld-time.c: Likewise.
+	* elf/ldconfig.c: Likewise.
+	* nscd/selinux.c: Likewise.
+	* elf/cache.c: Likewise.
+	Patch mostly by Benno Schulenberg <bensberg@justemail.net>.
+
+	[BZ #3451]
+	* sysdeps/i386/fpu/bits/mathinline.h (floor): Make rounding mode
+	change atomic.
+	(ceil): Likewise.
+
+2006-11-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* string/strxfrm_l.c (STRXFRM): Fix trailing \1 optimization
+	if N is one bigger than return value.
+	* string/tst-strxfrm2.c (do_test): Also test strxfrm with l1 + 1
+	and l1 last arguments, if buf is defined, verify the return value
+	equals to strlen (buf) and verify no byte beyond passed length
+	is modified.
+
+2006-11-10  Ulrich Drepper  <drepper@redhat.com>
+
+	* po/sv.po: Update from translation team.
+
 2006-11-09  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/x86_64/sysconf.c (intel_check_word): Add
