--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,13 @@
+2006-12-01  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* sysdeps/unix/sysv/linux/x86_64/sigaction.c: Fix compatibility with
+	libgcc not supporting `rflags' unwinding (register # >= 17).
+
+2006-11-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* sunrpc/svc_run.c (svc_run): Set my_pollfd to new_pollfd if realloc
+	succeeded.
+
 2006-11-29  Daniel Jacobowitz  <dan@codesourcery.com>
 	    Jakub Jelinek  <jakub@redhat.com>
 	    Jan Kratochvil  <jan.kratochvil@redhat.com>
