Import glibc-mainline for 2007-02-16

--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,33 @@
+2007-02-15  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #3991]
+	* assert/assert.h (assert): Simplify.
+	(assert_perror): Likewise.
+	Patch by Israel G. Lugo <ilugo@bridonsecurity.com>.
+
+	* nscd/nscd_helper.c (open_socket): Don't send padding bytes from
+	reqdata.
+
+	* sysdeps/unix/sysv/linux/x86_64/send.c (__libc_send): Cosmetic
+	change: don't pass NULL in place of an integer.
+
+2007-02-02  Bruno Haible  <bruno@clisp.org>
+
+	[BZ #3954]
+	* iconvdata/ksc5601.c (__ksc5601_sym_to_ucs, __ksc5601_sym_from_ucs):
+	Add mapping for U+327E.
+	* iconvdata/ksc5601.h (KSC5601_SYMBOL): Increment.
+	* iconvdata/johab.c (BODY for FROM_LOOP, BODY for TO_LOOP): Enable
+	mapping of 0xD9 0xE8.
+	* iconvdata/uhc.c (BODY for FROM_LOOP, BODY for TO_LOOP): Disable
+	mapping of U+327E.
+	Reported by Jungshik Shin <jungshik@google.com>.
+
+	[BZ #3955]
+	* iconvdata/johab.c (BODY for FROM_LOOP, BODY for TO_LOOP): Enable
+	mapping of 0xD9 0xE6 and of 0xD9 0xE7.
+	Reported by Jungshik Shin <jungshik@google.com>.
+
 2007-02-14  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/x86_64/bits/atomic;h: Fix asm parameters for some
