--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,18 @@
+2007-02-16  Ulrich Drepper  <drepper@redhat.com>
+
+	* locale/iso-3166.def: Update entry for Serbia.
+	* locale/iso-4217.def: Define RSD, remove CSD.
+
+	* sysdeps/x86_64/bits/atomic.h: One more change, this time for 16-
+	and 64-bit operations.
+
+	[BZ #4040]
+	* sysdeps/i386/i486/bits/atomic.h: One more change, this time for
+	16-bit operations.
+
+	* nscd/nscd.c (parse_opt): One more conversion to use send instead
+	of writev.
+
 2007-02-15  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #3991]
