--- a/fsf/trunk/libc/localedata/ChangeLog
+++ b/fsf/trunk/libc/localedata/ChangeLog
@@ -1,3 +1,53 @@
+2007-02-17  Ulrich Drepper  <drepper@redhat.com>
+
+	* SUPPORTED (SUPPORTED-LOCALES): Remove sr_CS locales.
+
+	[BZ #1430]
+	* locales/hu_HU: Revert
+		* locales/hu_HU: Better collation.
+		Patch by Gyuro Lehel <lehel@freemail.hu>.
+
+2005-01-16  Denis Barbier  <barbier@linuxfr.org>
+
+	[BZ #672]
+	* locales/ca_ES: Replace current collation rules by including
+	iso14651_t1 and adding extra rules if needed.  There should be
+	no noticeable changes in sorted text. only ligatures and
+	ignoreable characters have modified weights.
+	* locales/da_DK: Likewise.
+	* locales/en_CA: Likewise.
+	* locales/es_US: Likewise.
+	* locales/fi_FI: Likewise.
+	* locales/nb_NO: Likewise.
+
+2007-02-17  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #672]
+	* locales/iso14651_t1: Simplified.  Extended.
+
+	[BZ #58]
+	* locales/uk_UA: New version.
+
+	[BZ #3156]
+	* locales/pl_PL: Fix abday, abmon, d_t_fmt, d_fmt, and date_fmt.
+
+	[BZ #2692]
+	* locales/es_VE: Add am/pm format support.
+
+	[BZ #2648]
+	* locales/pl_PL: Fix currency_symbol and its placement.
+
+	[BZ #3363]
+	* SUPPORTED (SUPPORTED-LOCALES): Add tt_RU@iqtelif.
+	* locales/tt_RU@iqtelif: New file.
+
+	[BZ #3334]
+	* locales/sr_ME: Update from maintainer.
+
+	[BZ #3326]
+	* SUPPORTED (SUPPORTED-LOCALES): Add crh_UA.
+	* locales/crh_UA: New file.
+
 2007-02-16  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #3322]
