--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,32 @@
+2007-02-18  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #3325]
+	* sysdeps/i386/fpu/e_fmodf.S: Use fprem1 instead of fprem.
+	* sysdeps/i386/fpu/e_fmodl.c: Likewise.
+	* sysdeps/i386/fpu/e_fmod.S: Likewise.
+	Patch by Jared Casper <jaredcasper@gmail.com>.
+
+	* sysdeps/unix/closedir.c: Outside libc don't use locking.
+	* sysdeps/unix/opendir.c: Likewise.
+	* sysdeps/unix/readdir.c: Likewise.
+
+	[BZ #2211]
+	* stdio-common/vfscanf.c: Handle localized digits etc for floating
+	point numbers.
+	Patch mostly by Hamed Malek <hamed@farsiweb.info>.
+
+	* stdio-common/vfscanf.c: Fix problems in width accounting.
+	* stdio-common/tst-sscanf.c (double_tests): New tests.
+	(main): Hook them up.
+
+	* stdio-common/vfscanf.c: Remove unused WIDTH handling.
+	More simplifications of floating-point reader.
+
+	* stdio-common/Makefile (tests): Add tst-swscanf.
+	* stdio-common/tst-sscanf.c: Make tests usable for swscanf
+	testing.
+	* stdio-common/tst-swscanf.c: New file.
+
 2007-02-17  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #2633]
