--- a/fsf/trunk/libc/localedata/ChangeLog
+++ b/fsf/trunk/libc/localedata/ChangeLog
@@ -1,3 +1,13 @@
+2007-02-18  Ulrich Drepper  <drepper@redhat.com>
+
+	* Makefile (tests): Add tst-sscanf.
+	(LOCALES): Add fa_IR.UTF-8.
+	* tst-sscanf.c: New file.
+
+	* da_DK.in: Adjust for unified collation.
+
+	* locales/vi_VN: Don't define HOK here as well.
+
 2007-02-17  Ulrich Drepper  <drepper@redhat.com>
 
 	* SUPPORTED (SUPPORTED-LOCALES): Remove sr_CS locales.
