--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,85 @@
+2007-03-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* scripts/check-local-headers.sh: Filter out sys/capability.h.
+
+2007-03-22  Jakub Jelinek  <jakub@redhat.com>
+
+	* config.h.in (HAVE_LIBCAP): Add.
+	* nscd/selinux.h: Include sys/capability.h rather than non-existent
+	sys/capabilities.h.
+	* nscd/selinux.c (preserve_capabilities): Use cap_free instead of
+	free_caps.  Cast away const from 4th cap_set_flag argument.
+
+2007-03-26  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/Versions: Move sync_file_range to
+	GLIBC_2.6.
+	* sysdeps/unix/sysv/linux/Makefile [subdir=io] (sysdep_routines):
+	Add sync_file_range.
+	Reported by Atsushi Nemoto <anemo@mba.ocn.ne.jp>.
+
+2007-03-19  Steven Munroe  <sjmunroe@us.ibm.com>
+
+	* sysdeps/powerpc/bits/atomic.h
+	[!MUTEX_HINT_ACQ]: Define MUTEX_HINT_ACQ.
+	[!MUTEX_HINT_REL]: Define MUTEX_HINT_REL.
+	(__arch_compare_and_exchange_val_32_acq): Add MUTEX_HINT_ACQ to lwarx.
+	(__arch_compare_and_exchange_val_32_rel): Add MUTEX_HINT_REL to lwarx.
+	(__arch_atomic_exchange_val_32_acq): Add MUTEX_HINT_ACQ to lwarx.
+	(__arch_atomic_exchange_rel_32_rel): Add MUTEX_HINT_REL to lwarx.
+	* sysdeps/powerpc/powerpc32/bits/atomic.h [_ARCH_PWR6 || _ARCH_PWR6X]:
+	Define MUTEX_HINT_ACQ as ",1" and MUTEX_HINT_REL as ",0".
+	(__arch_compare_and_exchange_bool_32_acq): Add MUTEX_HINT_ACQ to lwarx.
+	(__arch_compare_and_exchange_bool_32_rel): Add MUTEX_HINT_REL to lwarx.
+	* sysdeps/powerpc/powerpc64/bits/atomic.h [_ARCH_PWR6 || _ARCH_PWR6D]:
+	Define MUTEX_HINT_ACQ as ",1" and MUTEX_HINT_REL as ",0".
+	(__arch_compare_and_exchange_bool_32_acq): Add MUTEX_HINT_ACQ to lwarx.
+	(__arch_compare_and_exchange_bool_32_rel): Add MUTEX_HINT_REL to lwarx.
+	(__arch_compare_and_exchange_bool_64_acq): Add MUTEX_HINT_ACQ to lwarx.
+	(__arch_compare_and_exchange_bool_64_rel): Add MUTEX_HINT_REL to lwarx.
+	(__arch_compare_and_exchange_val_64_acq): Add MUTEX_HINT_ACQ to lwarx.
+	(__arch_compare_and_exchange_val_64_rel): Add MUTEX_HINT_REL to lwarx.
+	(__arch_atomic_exchange_val_64_acq): Add MUTEX_HINT_ACQ to lwarx.
+	(__arch_atomic_exchange_rel_64_rel): Add MUTEX_HINT_REL to lwarx.
+
+2007-03-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/unix/sysv/linux/powerpc/libc-start.c
+	(__cache_line_size): Define the variable here.  Add
+	attribute_hidden, remove weak_extern.
+	(__libc_start_main): Set __cache_line_size
+	unconditionally.
+	* sysdeps/unix/sysv/linux/powerpc/dl-sysdep.c
+	(__cache_line_size): Define the variable here.  Add
+	attribute_hidden, remove weak_extern.
+	(DL_PLATFORM_AUXV): Set __cache_line_size
+	unconditionally.
+	* sysdeps/powerpc/powerpc32/dl-machine.c (__cache_line_size): Remove
+	weak_extern, add attribute_hidden.
+	(__elf_machine_runtime_setup): Assume __cache_line_size is always
+	defined in ld.so.
+	* sysdeps/powerpc/powerpc32/memset.S (__cache_line_size): Remove
+	definition.
+	* sysdeps/powerpc/powerpc64/memset.S (__cache_line_size): Likewise.
+
+2007-03-26  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #4276]
+	* timezone/africa: Update from tzdata2007d.
+	* timezone/asia: Likewise.
+	* timezone/australasia: Likewise.
+	* timezone/backward: Likewise.
+	* timezone/europe: Likewise.
+	* timezone/iso3166.tab: Likewise.
+	* timezone/leapseconds: Likewise.
+	* timezone/northamerica: Likewise.
+	* timezone/southamerica: Likewise.
+	* timezone/zone.tab: Likewise.
+
+	* timezone/private.h: Update from tzcode2007d.
+	* timezone/zdump.c: Likewise.
+	* timezone/zic.c: Likewise.
+
 2007-03-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* nis/nis_call.c: Include bits/libc-lock.h, sys/stat.h, unistd.h.
