--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,18 @@
+2007-05-29  Roland McGrath  <roland@redhat.com>
+
+	* po/Makefile (po-sed-cmd): New variable.
+	(libc.pot.files): Move sed command text in there, avoid \ inside ''.
+
+2007-05-29  Ulrich Drepper  <drepper@redhat.com>
+
+	* crypt/md5-crypt.c: Fix comment.
+
+	* nscd/nscd_helper.c (get_mapping): Handle short replies instead
+	of crashing.  When this is the case or if the reply is malformed,
+	don't try to close the new file descriptor since it does not
+	exist.
+	Patch in part by Guillaume Chazarain <guichaz@yahoo.fr>.
+
 2007-05-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/unix/sysv/linux/futimes.c (miss_utimensat): Don't define
